added animation, two cards with photos, text in front after hoovering over question mark button

--- a/main.html
+++ b/main.html
@@ -10,6 +10,26 @@
     <script src="https://kit.fontawesome.com/4a33ad076e.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    
+    <div class="cards">
+
+        <div class="card one">
+            <button><i class="far fa-question-circle"></i></button>
+            <div class="text">
+                <h1>CEO</h1>
+                <h2>Anne Kowalsky</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum cumque quibusdam, iure minima tempora quaerat natus ducimus consequuntur itaque repellat eaque quod libero, delectus reprehenderit facere blanditiis numquam veniam placeat.</p>
+            </div>
+        </div>
+
+            <div class="card two">
+                <button><i class="far fa-question-circle"></i></button>
+                <div class="text">
+                    <h1>HR</h1>
+                    <h2>Jan Nowak</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum cumque quibusdam, iure minima tempora quaerat natus ducimus consequuntur itaque repellat eaque quod libero, delectus reprehenderit facere blanditiis numquam veniam placeat.</p>
+                </div>
+            </div>
+
+    </div>
 </body>
 </html>
